--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^6.3.0",
     "helmet": "^5.0.2",
+    "ioredis": "^5.4.2",
     "joi": "^17.6.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^4.4.0",
     "randomstring": "^1.2.3"
   },
